infra/overlays/stage/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: $(CLUSTER_ISSUER)
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" 
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - $(KEYCLOAK_HOST)
    secretName: keycloak-tls
  rules:
  - host: $(KEYCLOAK_HOST)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
